jails: implement WoL, wol: refactor to use queues
